<resources>
    <string name="app_name">BitoronBD_Deliveryman</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="and">and</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="airposted_terms_of_condition">Airposted Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="webview">WebView</string>
    <string name="by_useing">By using Airposted, I agree to Airposted\'s</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="drive">drive</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="did_not_receive_the_code">Did not receive the code?</string>
    <string name="personal_information">Personal Information</string>
    <string name="take_your_photo">Take your photo*</string>
    <string name="next">Next</string>
    <string name="NID">NID</string>
    <string name="account_information">Account Information</string>
    <string name="resend_code">Resend Code</string>

    <string-array name="driver_type">
        <item>Per Time</item>
        <item>Full Time</item>
        <item>Traveler</item>
    </string-array>

    <string-array name="id">
        <item>National ID</item>
        <item>Driving Lic.</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="delivery_type">
        <item>All Orders</item>
        <item>Within 24 hours</item>
        <item>Within 48 hours</item>
    </string-array>

    <string-array name="delivery_status">
        <item>Request accepted</item>
        <item>Collected</item>
        <item>Delivered</item>
    </string-array>

    <string-array name="pref_area">
        <item>Mohammodpur</item>
        <item>Bonani</item>
        <item>Uttora</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="a_little_extra_income_along_the_journey">A little extra income along the journey</string>
    <string name="get_order_request">Get order request</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="my_delivery_history">My Delivery history</string>
    <string name="my_wallet">My wallet</string>
    <string name="my_live_delivery">My Live Delivery</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions_privacy"><![CDATA[Terms & Conditions / Privacy]]></string>
    <string name="sign_out">Sign out</string>
    <string name="badol_mondal">Badol Mondol</string>
    <string name="preferred_area">Preferred Area</string>
    <string name="all_parcel_request">All Parcel Request</string>
    <string name="receivable_amount">Receivable amount</string>
    <string name="due_amount">Due Amount</string>
    <string name="add_preferred_area">Add Preferred area</string>
    <string name="mohammadpur">Mohammadpur</string>
    <string name="_25_order_delivered_in_the_area">25 order delivered in the area</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="terms_condition_policy">Terms &amp; Conditions / Privacy</string>
    <string name="parcel_request">Parcel Request</string>
    <string name="document">Document</string>
    <string name="ask_the_sender_for_6_digit_otp_sent_to_his_her_device">Ask the sender for 6 digit\n OTP sent to his/her device</string>
    <string name="verify">Verify</string>
    <string name="order_from_person_name">Order from Person Name</string>
    <string name="status">Status</string>
    <string name="done">Done</string>
    <string name="verification">OTP Verification</string>
    <string name="sign_up_title">Sign Up For Delivery Man</string>
    <string name="sign_in">Sing In</string>
    <string name="enter">Enter verification code sent to \n</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="preferred_area_order_list">Preferred Area Order List</string>
    <string name="demo">"1. How do I request for a delivery? -\tTo request a delivery, you will have to select Send Parcel from the App. Then, you will have to select your pickup and drop-off location, fill in detailed information about the receiver of the item and select any one of the predefined product categories which is closest to the item you are sending. Then you can review information before you request for a delivery pickup, after which Airposted Parcel can find the nearest deliverer around you and send them your way. 2. How do I contact a deliverer?  -\tAfter accepting your request, you will see the deliverers’ name, picture and user rating appear on your phone screen, along with a phone icon. Press the phone icon beside the contact number to call the deliverer.  3. How do I cancel a request? -\tYou can cancel the request up until the start of your delivery. To do this, you have to press “Cancel Request”  4. How do I track my delivery? -\tThere are three stages in tracking your delivery. After the deliverer accepts your requests, your phone screen will show “Request Accepted”. The delivery status will change to “In Transit” the moment the deliverer starts the request. When the deliverer has successfully delivered your item, the status will change to “Delivered”. All throughout, your phone screen will display a phone icon to call the deliverer. Press on the phone icon to call the deliverer if you wish to know detailed location of your deliverer. "</string>
    <string name="skip">Skip</string>
    <string name="your_name">Your Name</string>
    <string name="default_notification_channel_id">Promotions</string>

    <string name="envelope_size1">8.5\"x14\"</string>
    <string name="large_size1">12\"x12\"x12\"</string>
    <string name="small_size1">8\"x8\"x8\"</string>
    <string name="all_orders">All Orders</string>
    <string name="tap_to_accept">Tap to Accept</string>
    <string name="pending_order">Pending Order</string>
    <string name="accept">Accept</string>
</resources>