<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FCFCFF"
        android:clickable="true"
        android:focusable="true"
        tools:context=".view.auth.PhoneNumberFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textStyle="normal"
                android:textSize="28sp"
                android:textColor="#0f122f"
                android:text="@string/mobile_number"
                />

            <TextView
                android:id="@+id/desc"
                android:layout_below="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="#56586d"
                android:text="We will send a verification code to this number"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:layout_above="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:layout_alignStart="@+id/next"
                android:layout_alignEnd="@+id/next"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_marginStart="15dp"
                    android:textStyle="normal"
                    android:textSize="14sp"
                    android:textColor="#56586d"
                    android:lineSpacingExtra="5sp"
                    android:text="+88 01"
                    android:layout_marginLeft="15dp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/view_color"/>

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:maxLines="1"
                    android:background="@null"
                    android:hint="@string/enter_your_phone_number"
                    android:textColor="#000"
                    android:padding="20dp"
                    android:textSize="14sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:padding="18dp"
                android:text="@string/next"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:background="@drawable/before_button_bg"
                android:gravity="center_horizontal" />

<!--            <TextView-->
<!--                android:id="@+id/sign_in"-->
<!--                android:layout_below="@+id/next"-->
<!--                android:layout_marginTop="34dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/poppins_semi_bold"-->
<!--                android:textStyle="normal"-->
<!--                android:textSize="15sp"-->
<!--                android:textColor="#3b5998"-->
<!--                android:lineSpacingExtra="46sp"-->
<!--                android:layout_centerHorizontal="true"-->
<!--                android:text="@string/sign_in"-->
<!--                />-->

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_open_screen_bg"/>

    </RelativeLayout>

</layout>