<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FCFCFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_airposted_logo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/gill_sans_heavy"
                    android:textStyle="normal"
                    android:textSize="27sp"
                    android:textColor="#000000"
                    android:text="@string/drive"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/title"
                android:layout_above="@+id/forget_password"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/MyTextInputLayout"
                    app:errorEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textSize="15sp"
                        android:maxLength="11"
                        android:hint="@string/phone_number"
                        android:imeOptions="actionNext"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/MyTextInputLayout"
                    app:errorEnabled="false">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="15sp"
                        android:hint="@string/enter_your_password"
                        android:imeOptions="actionDone"
                        android:maxLines="1"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="#0f122f"
                android:lineSpacingExtra="46sp"
                android:text="Forgot Password?"
                />

            <TextView
                android:id="@+id/sign_in"
                android:layout_below="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                android:layout_centerInParent="true"
                android:padding="18dp"
                android:text="Sign in"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/before_button_bg"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/create_account"
                android:layout_below="@+id/sign_in"
                android:layout_marginTop="34dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:textStyle="normal"
                android:textSize="15sp"
                android:textColor="#3b5998"
                android:lineSpacingExtra="46sp"
                android:layout_centerHorizontal="true"
                android:text="Create New Account"
                />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_open_screen_bg"/>

    </RelativeLayout>

</layout>